WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206981
Fix bad assertion in InternalFunctionAllocationProfile::createAllocationStructureFromBase().
https://bugs.webkit.org/show_bug.cgi?id=206981
Summary
Fix bad assertion in InternalFunctionAllocationProfile::createAllocationStruc...
Mark Lam
Reported
2020-01-29 19:08:32 PST
<
rdar://problem/58985736
>
Attachments
proposed patch.
(3.86 KB, patch)
2020-01-29 19:15 PST
,
Mark Lam
keith_miller
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2020-01-29 19:15:47 PST
Created
attachment 389219
[details]
proposed patch.
Keith Miller
Comment 2
2020-01-29 19:18:08 PST
Comment on
attachment 389219
[details]
proposed patch. r=me
Mark Lam
Comment 3
2020-01-29 21:52:38 PST
Thanks for the review. Landed in
r255416
: <
http://trac.webkit.org/r255416
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug