Fix bad assertion in InternalFunctionAllocationProfile::createAllocationStructureFromBase(). https://bugs.webkit.org/show_bug.cgi?id=206981 <rdar://problem/58985736>

Reviewed by Keith Miller.

JSTests:

* stress/InternalFunctionAllocationProfile-createAllocationStructureFromBase-should-allow-for-same-classInfo-from-different-globals.js: Added.

Source/JavaScriptCore:

InternalFunctionAllocationProfile::createAllocationStructureFromBase() is only
called from FunctionRareData::createInternalFunctionAllocationStructureFromBase(),
which in turn is only called from InternalFunction::createSubclassStructureSlow().

InternalFunction::createSubclassStructureSlow() only allows a call to
FunctionRareData::createInternalFunctionAllocationStructureFromBase() under
certain conditions.  One of these conditions is that the baseGlobalObject is
different than the newTarget's globalObject.

InternalFunctionAllocationProfile::createAllocationStructureFromBase() has an
ASSERT on the same set of conditions, with one ommission: the one above.  This
patch fixes the ASSERT by adding the missing condition to match the check in
InternalFunction::createSubclassStructureSlow().

* bytecode/InternalFunctionAllocationProfile.h:
(JSC::InternalFunctionAllocationProfile::createAllocationStructureFromBase):



Canonical link: https://commits.webkit.org/220002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255416 268f45cc-cd09-0410-ab3c-d52691b4dbfc